syntax="proto3";

import "events.proto";

message ApplyRequest{
    repeated Event Events = 1;
}

message ApplyResponse{
    uint64 Version = 1;
}

message ScenarioRequest {
    string Name = 1;
    repeated Event Events = 2;
    int64 timestamp = 3;
}


message Error {
    string Message = 1;
}

message ScenarioResponse {
    Error Error = 1;
}


message KillRequest{}

message PingRequest{}

message OkResponse {}


message WipeDatabase{}

// TODO: make this streaming


// Test service helps to automate specification checks, screenshots and tutorials
service Test {
    // Setup a given state in the database
    rpc Setup(ScenarioRequest) returns (OkResponse){}
    rpc Kill(KillRequest) returns(OkResponse){}
    rpc Ping(PingRequest) returns(OkResponse){}
    rpc Wipe(WipeDatabase) returns (OkResponse){}
    rpc Apply(ApplyRequest) returns (ApplyResponse){}
}

